--- a/test/fixtures/modal/missing-role-document.html
+++ b/test/fixtures/modal/missing-role-document.html
@@ -5,20 +5,20 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Test</title>
-        <link rel="stylesheet" href="../../../node_modules/qunit/qunit/qunit.css">
-
         <!--[if lt IE 9]>
             <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
             <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
-        <script src="../../../node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="../../../node_modules/qunit/qunit/qunit.js"></script>
+        <script src="../../lib/jquery.min.js"></script>
+
+        <link rel="stylesheet" href="../../lib/qunit.css">
+        <script src="../../lib/qunit.js"></script>
         <script src="../../../dist/browser/bootlint.js"></script>
         <script src="../generic-qunit.js"></script>
     </head>
     <body>
-        <div class="modal hide" tabindex="-1" role="dialog">
-            <div class="modal-dialog" role="document">
+        <div class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -37,7 +37,7 @@
 
         <div id="qunit"></div>
         <ol id="bootlint">
-            <li data-lint="`.hide` should not be used on `.modal` in Bootstrap v3."></li>
+            <li data-lint="`.modal-dialog` must have a `role=&quot;document&quot;` attribute."></li>
         </ol>
     </body>
 </html>
